# Easy_LLMengine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  act_kernel.cu  add_residual.cu  attn_softmax_kernel.cu  build_casual_mask.cu  cal_paddingoffset.cu  concat_past_kv.cu  concat_past_kv.h  cublas_utils.cc  fused_addresidual_norm.cu  fused_decoder_self_attention.cu  input_embedding.cu  qkv_bias_and_RoPE.cu  repeat_kv.cu  rmsnorm_kernel.cu  sampling.cu
src/layers/: CMakeLists.txt
src/layers/attention/: CMakeLists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/decoder/: CMakeLists.txt  context_decoder.cpp  context_decoder.h  self_decoder.cpp  self_decoder.h
src/layers/ffn/: CMakeLists.txt  ffn.cpp  ffn.h
src/memory/allocator/: cuda_allocator.h
src/models/: basemodel.h
src/models/llama/: llama.cpp  llama_params.h
src/utils/: macro.h  params.h  string_utils.h  vectorize_utils.h
src/weights/llama/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  test_act.cu  test_bias_and_RoPE.cu  test_cal_paddingoffset.cu  test_casual_mask.cu  test_concat_kv.cu  test_fused_addresidual_norm.cu  test_fused_decoder_attention.cu  test_fused_trans_remv_pad.cu  test_input_embedding.cu  test_mask_softmax.cu  test_repeat_kv.cu  test_rmsnorm.cu
